tests/src/frontend/typechecking/invalid/frozen_lambda_5.sk
mutable class Foo(mutable f: () -> void)
fun no(f: mutable Foo): void {
  freeze(f).f()
}
